# aval-design-studio

./: .gitattributes  .gitignore  ABOUT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  media-toolchain.yml  pages.yml  release.yml
docs/: architecture.md  project-format.md  releases.md  toolchain.md
scripts/: check-versions.mjs  collect-media-source-offer.mjs  download-release-assets.mjs  fetch-media-toolchain.mjs  github-release-assets.mjs  media-source-lib.mjs  media-source-lib.test.mjs  package-media-toolchain.mjs  prepare-sidecars.mjs  release-workflow.test.mjs  site-downloads.test.mjs  toolchain-lib.mjs  toolchain-lib.test.mjs  upload-release-assets.mjs  validate-pages-site.mjs  verify-archive-sha256.mjs  verify-release-assets.mjs  verify-release-assets.test.mjs  verify-toolchain.mjs  write-release-config.mjs  write-site-downloads.mjs
sidecar/: package.json
sidecar/src/: index.mjs  protocol.mjs
sidecar/test/: protocol.test.mjs
site/: downloads.js  downloads.json  index.html  site.webmanifest  styles.css
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
toolchain/: media-sources.json  versions.json
(+35 files in other folders)
