[package]
name = "aval-design-studio"
version = "0.1.0"
description = "A cross-platform visual authoring studio for AVAL interactive video assets."
authors = ["Zach Lisko"]
edition = "2024"
license = "MIT"
repository = "https://github.com/mckay115/aval-design-studio"

[lib]
name = "aval_design_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
